# Home_Work_Django_REST

./: .env  .env.example  .gitignore  Dockerfile  README.md  db.json  docker-compose.yaml  pyproject.toml
.github/workflows/: deploy.yml  test.yml
config/: celery.py  settings.py  urls.py
materials/: admin.py  filters.py  models.py  paginators.py  serializers.py  tasks.py  tests.py  urls.py  validators.py  views.py
materials/migrations/: 0001_initial.py  0002_alter_course_description_alter_lesson_description_and_more.py  0003_lesson_payment_date_lesson_payment_method.py  0004_course_owner_lesson_owner.py  0005_subscription.py  0006_course_price.py
users/: admin.py  filters.py  models.py  permissions.py  serializers.py  tasks.py  tests.py  urls.py  views.py
users/fixtures/: payments.json
users/management/commands/: csu.py
users/migrations/: 0001_initial.py  0002_payment.py  0003_alter_user_options_alter_user_managers_and_more.py  0004_payment_stripe_price_id_payment_stripe_product_id_and_more.py
users/services/: stripe_service.py
