[tool.poetry]
name = "home-work-django-rest"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{ include = "config" }]

[tool.poetry.dependencies]
django = "^5.1.3"
djangorestframework = "^3.15.2"
python-dotenv = "^1.0.1"
pillow = "^11.0.0"
black = "^24.10.0"
isort = "^5.13.2"
flake8 = "^7.1.1"

django-filter = "^24.3"
djangorestframework-simplejwt = "^5.3.1"
method-decorator = "^0.1.3"
chardet = "^5.2.0"
coverage = "7.6.8"
drf-yasg = "^1.21.8"
stripe = "^11.3.0"
celery = "^5.4.0"
django-celery-beat = "^2.7.0"
eventlet = "^0.38.0"
redis = "^5.2.1"
psycopg = "^3.2.3"
python = "^3.12"
dj-database-url = "^2.3.0"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


